fixed modal window height on mobile

--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ body {
 }
 
 .modal-rules-img {
-  width: 90%;
-  height: auto;
+  width: auto;
+  height: 50%;
 }
 
 /* ---------- HEADER SECTION ---------- */
